<resources>
    <string name="app_name" translatable="false">Commun.it</string>
    <string name="title_activity_main" translatable="false">Commun.it</string>
    <string name="map">Map</string>
    <string name="map_tooltip">Open map</string>
    <string name="notes">Notes</string>
    <string name="notes_tooltip">Add notes</string>
    <string name="profile">Personal data</string>
    <string name="profile_tooltip">Consult and change</string>
    <string name="settings">Settings</string>
    <string name="settings_tooltip">Change settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_search_label">Search…</string>
    <string name="notes_search_label">Search in notes…</string>
    <string name="new_note_descriptor">Add a new note</string>
    <string name="title_activity_notes">Notes</string>
    <string name="more_actions_on_this_item">More actions on this item</string>
    <string name="title_activity_login">Login</string>
    <string name="title_main_activity">Welcome</string>
    <string name="add_note_title">Add a note</string>
    <string name="note_title_label">Title</string>
    <string name="note_desc_label">Description</string>
    <string name="add_note_save_btn_label">Save</string>
    <string name="empty_note_title_error">Please enter a valid title</string>
    <string name="empty_note_desc_error">Please enter a valid description</string>
    <string name="menu_delete_note_label">Delete</string>
    <string name="menu_edit_note_label">Edit</string>
    <string name="delete_note_dialog_title">Are you sure you want to delete the note?</string>
    <string name="delete_note_dialog_message">Deleting the note is irreversible</string>
    <string name="delete_note_dialog_cancel">Cancel</string>
    <string name="delete_note_dialog_confirm">Confirm</string>
    <string name="edit_note_save_btn_label">Update</string>
    <string name="edit_note_title">Edit note</string>
    <string name="login_activity_email_label" translatable="false">Email</string>
    <string name="login_activity_password_label" translatable="false">Password</string>
    <string name="login_activity_signin_label">Sign-in</string>
    <string name="incorrect_email_or_password">Incorrect email and/or password!</string>
    <string name="user_prefs_info_key" translatable="false">USER_INFO</string>
    <string name="app_jwt_key" translatable="false">jwt</string>
    <string name="profile_edit_information_toggle_label">Edit information</string>
    <string name="profile_name_label">Name</string>
    <string name="profile_save_button_label">Save</string>
    <string name="profile_full_name_tpl" translatable="false">%1$s %2$s</string>
    <string name="profile_password_placeholder" translatable="false">PASSWORD PLACEHOLDER</string>
    <string name="profile_logout_button_text" translatable="false">Logout</string>
    <string name="window_occurrence_is_road_problem_lbl">Road problem</string>
    <string name="add_an_occurrence_label">Add an occurrence</string>
    <string name="add_occurrence_error_label">Please provide a small description</string>
    <string name="add_occurrence_photo_error">Please add a photo to your report</string>
    <string name="add_photo_to_occurrence_warn">To add an occurrence, please attach a photo by clicking the camera icon above.</string>
    <string name="occurrence_details_lbl">Occurrence details</string>
    <string name="filter_show_all_label">All</string>
    <string name="filter_show_1km_label" translatable="false">1KM</string>
    <string name="filter_show_5km_label" translatable="false">5KM</string>
    <string name="filter_show_15km_label" translatable="false">15KM</string>
    <string name="only_road_problems_label">Only road problems</string>
</resources>