<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MapsActivity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/map_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#626262"
        app:backgroundTint="#FFFFFF"/>

    <CheckBox
        android:id="@+id/is_road_problem_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:checked="false"
        android:text="@string/only_road_problems_label"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/distance_filters" />

    <RadioGroup
        android:id="@+id/distance_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="24dp"
        android:checkedButton="@+id/radio_show_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_show_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filter_show_all_label" />

        <RadioButton
            android:id="@+id/radio_show_1km"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filter_show_1km_label" />

        <RadioButton
            android:id="@+id/radio_show_5km"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filter_show_5km_label" />

        <RadioButton
            android:id="@+id/radio_show_15km"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filter_show_15km_label" />
    </RadioGroup>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_occurrence_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_outline_add_location_24"
        app:tint="#FFFFFF"
        app:backgroundTint="#0E4DA4"
        app:backgroundTintMode="add"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>