<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddOccurrenceActivity">

    <ImageButton
        android:id="@+id/add_occurrence_back_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_occurrence_label"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center"
        android:textColor="#263238"
        android:text="@string/add_an_occurrence_label"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/add_occurrence_back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_occurrence_label">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_occurrence_description_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/note_title_label"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_occurrence_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect" />
            </com.google.android.material.textfield.TextInputLayout>
            <CheckBox
                android:id="@+id/add_occurrence_is_road_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/window_occurrence_is_road_problem_lbl"
                android:layout_marginBottom="8dp"/>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/add_occurrence_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:context=".activity.AddOccurrenceActivity" >
            </androidx.fragment.app.FragmentContainerView>
            <ImageButton
                android:id="@+id/add_occurrence_photo_btn"
                android:layout_height="64dp"
                android:layout_width="match_parent"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:onClick="takePhoto"/>

            <TextView
                android:id="@+id/add_photo_prompt_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photo_to_occurrence_warn"
                android:textColor="@android:color/holo_red_dark"/>

            <ImageView
                android:id="@+id/occurrence_img_preview"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:visibility="visible"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_occurrence_save_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_note_save_btn_label"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>