<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <ImageButton
        android:id="@+id/profile_back_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_image_view"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:src="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/profile_header_name"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            tools:text="Name Placeholder" />

        <TextView
            android:id="@+id/profile_header_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#7B7171"
            tools:text="Email Placeholder" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/profile_edit_information_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/profile_edit_information_toggle_label"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:hint="@string/profile_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:hint="@string/login_activity_email_label"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:hint="@string/login_activity_password_label"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_profile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/profile_logout_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_logout_button_text"
                android:textColor="#263238" />
            <Button
                android:id="@+id/profile_save_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:text="@string/profile_save_button_label"
                android:textColor="#263238" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>